cargo-features = ["edition2024"]
[package]
name = "bala"
version = "0.1.0"
edition = "2024"

[dependencies]
derivative = "2.2.0"
indexmap = "2.2.6"
itertools = "0.13.0"
ordered-float = "4.2.1"
petgraph = "0.6.5"

[dependencies.bril-rs]
path = "bril-rs"
version = "0.1.0"
features = ["position"]

[dependencies.brilirs]
path = "brilirs"
version = "0.1.0"
features = []

[dependencies.bril2json]
path = "bril-rs/bril2json/"
version = "0.1.0"
features = []
